Fixes by cjboco: github issue #1: Moved inline styles and images to stylesheet. github issue #2: Some color names were duplicated in the colors list. github issue #3: TD vertical-align issue with non-themeroller jQueryUI themes.

--- a/jquery.colorpicker.css
+++ b/jquery.colorpicker.css
@@ -13,6 +13,10 @@
 	margin: 0;
 }
 
+.ui-colorpicker table td {
+	vertical-align: top;
+}
+
 .ui-colorpicker table td > *{
 	margin-left: 10px;
 }
@@ -33,14 +37,7 @@
     display: inline-block;	
 }
 
-#ui-colorpicker-map,
-#ui-colorpicker-map > * {
-    display: block;
-	width: 256px;
-	height: 256px;
-	overflow: hidden;
-}
-
+/* Bar & map */
 #ui-colorpicker-map > *,
 #ui-colorpicker-bar > * {
     position: absolute;
@@ -51,7 +48,22 @@
 #ui-colorpicker-bar-pointer {
     position: absolute;
 }
+/* Map */
+#ui-colorpicker-map,
+#ui-colorpicker-map > * {
+    display: block;
+	width: 256px;
+	height: 256px;
+	overflow: hidden;
+}
 
+#ui-colorpicker-map-layer-1,
+#ui-colorpicker-map-layer-2 { background: url(images/map.png) no-repeat; }
+#ui-colorpicker-map-layer-alpha { background: url(images/map-opacity.png); }
+#ui-colorpicker-map-pointer { display: inline-block; width: 15px; height: 15px; background: url(images/map-pointer.png) no-repeat; }
+
+
+/* Bar */
 #ui-colorpicker-bar,
 #ui-colorpicker-bar > * {
     display: block;
@@ -61,6 +73,15 @@
     background-repeat: repeat-x;
 }
 
+#ui-colorpicker-bar-layer-1,
+#ui-colorpicker-bar-layer-2,
+#ui-colorpicker-bar-layer-3,
+#ui-colorpicker-bar-layer-4 { background: url(images/bar.png) repeat-x; }
+#ui-colorpicker-bar-layer-alpha { background: url(images/bar-opacity.png); }
+#ui-colorpicker-bar-layer-alphabar { background: url(images/bar-alpha.png); }
+#ui-colorpicker-bar-pointer { display: inline-block; width: 20px; height: 7px; background: url(images/bar-pointer.png) no-repeat; }
+
+/* Preview */
 #ui-colorpicker-preview {   
 	text-align: center;
 }
@@ -81,22 +102,21 @@
     width: 50px;
     height: 20px;
     display: inline-block;
+	background: url(images/preview-opacity.png) repeat;
 }
 
-#ui-colorpicker-inputs {}
-
-#ui-colorpicker-hex input,
-#ui-colorpicker-inputs input {}
-
+/* Inputs */
 #ui-colorpicker-inputs label {
     width: 1.5em;
     display: inline-block;
 }
 
+/* Hex */
 #ui-colorpicker-hex {
 	text-align: center;
 }
 
+/* Swatches */
 #ui-colorpicker-swatches {
 	width: 84px;
 	height: 256px;
@@ -111,7 +131,4 @@
 	height: 11px;
     border-right: 1px solid black;
     border-bottom: 1px solid black;
-}
-
-.ui-colorpicker-swatch:hover {
 }
